<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:paddingTop="24dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RadioGroup
      android:id="@+id/rg_platforms"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="24dp"
      android:layout_marginRight="24dp"
      android:orientation="horizontal">

      <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/platform_baidu"/>

      <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/platform_sougou"/>

      <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/platform_google"/>

    </RadioGroup>

    <EditText
      android:id="@+id/et_keyword"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:paddingLeft="24dp"
      android:paddingRight="24dp"
      android:background="@null"
      android:gravity="center"
      android:hint="@string/keyword"
      android:singleLine="true"
      android:textColor="#333"
      android:textColorHint="#ccc"
      android:textSize="14sp"/>

    <TextView
      android:id="@+id/tv_clear_cookie"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dp"
      android:text="@string/clear_cookie"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="44dp"
      android:layout_marginTop="30dp"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/tv_sure"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sure"
        android:textColor="#333"/>

      <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="#e5e5e5"/>

      <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#333"/>
    </LinearLayout>

  </LinearLayout>

</RelativeLayout>